<resources>
    <string name="app_name" translatable="false">iRYDN</string>
    <string name="dashboard_title">iRYDN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Any">Any</string>
    <string name="Sedan">Sedan</string>
    <string name="Jeepeta">SUV</string>
    <string name="Minivan">Minivan</string>
    <string name="Moto_Concho">Moter Cycle</string>
    <string name="no_internet_label">Internet Not Available</string>
    <string name="check_your_connection">Please check your connection !!!</string>
    <string name="go_settings">Go Settings</string>
    <string name="no_net_connection">Internet Not Available, Please check your connection !!!</string>
    <string name="book_your_rides">Book Your Rides</string>
    <string name="your_rides">Your Rides</string>
    <string name="rate">Rate</string>
    <string name="qr_code">QR Code</string>
    <string name="scanner">Scanner</string>
    <string name="reallyExit">Do you really want to exit?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="rate_app_on_playstore">Please, rate this app on PlayStore.</string>
    <string name="cancel_str">Cancel</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="write_your_review_for_driver">Write your review for driver...</string>
    <string name="how_was_driver">How Was The Driver?</string>
    <string name="forget_your_password">Forgot your password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Choose_your_language">Choose Your Language</string>
    <string name="add_your_custom_map">ADD YOUR CUSTOM MAP</string>
    <string name="map_style">You can set your map style, as you like</string>
    <string name="choose_option">Choose Option</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="drivers_are_another_route">Drivers are another route Please try again</string>
    <string name="default_str" translatable="false">DEFAULT</string>
    <string name="dark" translatable="false">DARK</string>
    <string name="paper" translatable="false">PAPER</string>
    <string name="custom" translatable="false">CUSTOM</string>
    <string name="retro" translatable="false">RETRO</string>
    <string name="add_contact">Add new contact</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="user_drop_location">User Drop Location</string>
    <string name="route_not_available">Route not available, Please choose \n another drop location</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="ride_schedule">Ride Scheduled</string>
    <string name="will_receive_pickup_before_15_minutes">You Will Receive Ride Details 15 minutes before Pick Up Time</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="password_min_character">Password minimum character should be 6</string>
    <string name="allow">Allow</string>
    <string name="location_header" translatable="false">Location &amp; Read permission is required</string>
    <string name="location_and_read_permission" translatable="false">Turn on Location to quickly see available rides near you. Read permission will let us read contact.</string>
    <string name="allow_permission_from_settings">Please allow all permission from settings</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="exit">Exit</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="do_not_server_location">Sorry, we don\'t serve this location yet.</string>
    <string-array name="vehicle_array">
        <item>@string/Any</item>
        <item>@string/Sedan</item>
        <item>@string/Jeepeta</item>
        <item>@string/Minivan</item>
        <item>@string/Moto_Concho</item>
    </string-array>
    <string name="english" translatable="false">ENGLISH</string>
    <string name="spanish" translatable="false">ESPAÑOL</string>
    <string name="change_language">Change Language</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="country">Country</string>
    <string name="login">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="order_car_now">Call Driver</string>
    <string name="pick_up">Pick Up</string>
    <string name="fare">Fare</string>
    <string name="details">Details</string>
    <string name="promo">Promo</string>
    <string name="from">From Where To Pick Up?</string>
    <string name="to">Where to get Drop?</string>
    <string name="pay_by_card">Pay By Card</string>
    <string name="your_car">Your Car</string>
    <string name="back_press_again">Press Again to Exit</string>
    <string name="pick_up_location">Pick Up Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="fcm_message" translatable="false">message</string>
    <string name="default_notification_channel_id" translatable="false">205</string>
    <string name="dsv_ex_msg_dont_set_lm" translatable="false">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler" translatable="false">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>
    <string name="update_play_services">My Taxi Ride uses google play services for some critical features.</string>
    <string name="please_update">Please Update!</string>
    <string name="do_you_want_to_update">Do you want to update?</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="srn_drawer_open" translatable="false">Open</string>
    <string name="srn_drawer_close" translatable="false">Close</string>
    <string name="srn_ex_no_menu_view" translatable="false">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view" translatable="false">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>
    <string name="notification">Notifications</string>
    <string name="language">Change Language</string>
    <string name="no_taxi_available">No Taxi Available</string>
    <string name="book_your_ride">Book Your Ride</string>
    <string name="your_trips">Your Trips</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="ride_later">Ride Later</string>
    <string name="ride_now">Ride Now</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="technical_support">24/7 Technical Support</string>
    <string name="customer_care">Customer Care</string>
    <string name="we_have_the_team">We have the team</string>
    <string name="ready_to_listen">Ready to listen</string>
    <string name="we_belive_that_our_customer">We believe that our customers are the most important part of our business. We are always available and ready to listen to any issues you have or any potential improvements we can make to our system.</string>
    <string name="contact_us_or_email_us">Contact us on 718&#8211;666&#8211;9848 &amp; 212&#8211;920&#8211;7641 or \nemail us on customercare@irydn.com</string>
    <string name="dedicated_to_you">Dedicated to you</string>
    <string name="days_a_year_rain_or_shine">24/7, 365 days a year, rain or shine, we are there</string>
    <string name="we_are_dedicated_to_provide_you_with_best">We are dedicated to provide you with the best in technical support.</string>
    <string name="at_my_taxi_ride_dispatch_system">At iRYDN Dispatch System we believe that support isn’t just about answering the phone when things go wrong. What’s important is the speed at which we address and solve any issues, so that your business has the solid foundations to become successful and thrive.</string>
    <string name="we_have_the_numbers">We have the numbers</string>
    <string name="over_fifty_support_staff">Over 50 support staff on-call throughout the UK ready to respond instantly</string>
    <string name="our_technical_support_is_delivered_in_three_ways">Our 24/7 Technical Support is delivered in three ways. The 24/7 Technical Support Helpline, Field-based Engineers and Mobile Data &amp; Radio Equipment Repairs. Each department consists of experienced and highly skilled individuals, trained to deal with any issue no matter how complex.</string>
    <string name="we_have_the_experience">We have the experience</string>
    <string name="years_of_technological_expertise_and_team">20 years of technological expertise and a team who have seen it all and know our software inside out</string>
    <string name="for_over_twenty_years_we_have_been_world_market">For over 20 years we have been the World’s market leader in taxi dispatch systems. Our comprehensive knowledge and understanding of the industry, built on the experience gained from over 1,000 installations, is unmatched by anyone else. At iRYDN Dispatch System, we understand that your business cannot experience any disruption that could result in loss of revenue or reputation, which in turn could result in driver dissatisfaction and poor staff morale. That’s why, if there are any technical issues, we will act swiftly and efficiently to resolve your problems.</string>
    <string name="always_striving_to_improve">Always striving to improve</string>
    <string name="over_ten_millions_pounds_have_beenn_invested">Over 10 MILLION POUNDS have been invested into R &amp; D &amp; System Support in the last 5 years!</string>
    <string name="we_continue_to_invest_heavily_in_our_infrastructure">We continue to invest heavily in our infrastructure to ensure that we can consistently deliver the highest level of 24/7 TECHNICAL SUPPORT to our ever-increasing customer base. With iRYDN Dispatch System’s support in place, you are safe in the knowledge that you are getting the best possible system support available anywhere.</string>
    <string name="a_dedicated_committed_team_of_individuals_willing">A dedicated &amp; committed team of individuals willing to go the extra mile to guarantee your success</string>
    <string name="if_a_problem_cannot_be_default_with_via_our_technical_support">If a problem cannot be dealt with via our 24/7 Technical Support Help Line then one of our many proficient and experienced field-based engineers will be dispatched to your office to resolve the issue. We have a highly skilled and versatile team based at iRYDN Dispatch System International HQ to deal with any faulty or damaged mobile data terminals and radio equipment. Be it general wear-and tear or driver ‘mishaps’, our Support Team is ready to help.</string>
    <string name="unique_to_our_support">Unique to our support</string>
    <string name="not_available">N/A</string>
    <string name="remote_monitoring_tool_we_fix_a_problem_before_realize">Remote monitoring tool: We fix a problem before you even realize it exists True Critical Cover: We have the capacity to dispatch an iRYDN Dispatch System engineer overnight and not the following morning! No hidden costs: One flat 24/7 support monthly rate, whatever happens NO SUB-CONTRACTING: At iRYDN Dispatch System we believe our services must be provided in house</string>
</resources>