<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ActivityCustomerCare">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkSkyBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/tv_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/technical_support"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_3sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/support1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/dedicated_to_you"
                        android:textColor="@color/colorDarkSkyBlue"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/days_a_year_rain_or_shine"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:justificationMode="inter_word"
                        android:text="@string/we_are_dedicated_to_provide_you_with_best"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/at_my_taxi_ride_dispatch_system"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_3sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/support2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/we_have_the_numbers"
                        android:textColor="@color/colorDarkSkyBlue"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/over_fifty_support_staff"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:justificationMode="inter_word"
                        android:text="@string/our_technical_support_is_delivered_in_three_ways"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_3sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/support3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/we_have_the_experience"
                        android:textColor="@color/colorDarkSkyBlue"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/years_of_technological_expertise_and_team"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:justificationMode="inter_word"
                        android:text="@string/for_over_twenty_years_we_have_been_world_market"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_3sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/support4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/always_striving_to_improve"
                        android:textColor="@color/colorDarkSkyBlue"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/over_ten_millions_pounds_have_beenn_invested"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:justificationMode="inter_word"
                        android:text="@string/we_continue_to_invest_heavily_in_our_infrastructure"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_3sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/support5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/we_have_the_team"
                        android:textColor="@color/colorDarkSkyBlue"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/a_dedicated_committed_team_of_individuals_willing"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:justificationMode="inter_word"
                        android:text="@string/if_a_problem_cannot_be_default_with_via_our_technical_support"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_3sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/support6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/unique_to_our_support"
                        android:textColor="@color/colorDarkSkyBlue"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/not_available"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:justificationMode="inter_word"
                        android:text="@string/remote_monitoring_tool_we_fix_a_problem_before_realize"
                        android:textColor="@color/text_title_color"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>